tests/spec/emit/snapshots/struct_with_multiple_tags.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[json]\n#[db]\nstruct User {\n  #[json(omitempty)]\n  #[db(\"user_name\")]\n  name: string,\n}\n"
---
package main

type User struct {
	Name string `json:"name,omitempty" db:"user_name"`
}
