tests/spec/emit/snapshots/struct_with_negated_omitempty.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json(omitempty)]
  struct User {
    #[json(!omitempty)]
    id: int,
    name: string,
  }
---
package main

type User struct {
	Id   int    `json:"id"`
	Name string `json:"name,omitempty"`
}
