tests/spec/emit/snapshots/struct_with_option_alias_omitempty.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Maybe<T> = Option<T>
  
  #[json(omitempty)]
  struct User {
    name: Maybe<string>,
    email: Option<string>,
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Maybe[T any] = lisette.Option[T]

type User struct {
	Name  Maybe[string]          `json:"name,omitempty,omitzero"`
	Email lisette.Option[string] `json:"email,omitempty,omitzero"`
}
