tests/spec/emit/snapshots/struct_with_snake_case_oauth.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json(snake_case)]
  struct Auth {
    OAuth2Token: string,
  }
---
package main

type Auth struct {
	OAuth2Token string `json:"oauth2_token"`
}
