tests/spec/emit/snapshots/struct_with_tag_json_omitempty_option.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct User {
    #[tag("json", omitempty)]
    email: Option<string>,
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type User struct {
	Email lisette.Option[string] `json:"email,omitzero"`
}
