tests/spec/emit/snapshots/struct_with_tag_ordering.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[yaml]\n#[json]\n#[xml]\n#[db]\nstruct User {\n  #[yaml(\"user\")]\n  #[json(\"user\")]\n  #[xml(\"user\")]\n  #[db(\"user\")]\n  name: string,\n}\n"
---
package main

type User struct {
	Name string `json:"user" db:"user" xml:"user" yaml:"user"`
}
