tests/spec/emit/snapshots/struct_with_tag_raw_mode.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[tag]\nstruct User {\n  #[tag(`json:\"name,omitempty\" validate:\"required\"`)]\n  name: string,\n}\n"
---
package main

type User struct {
	Name string `json:"name,omitempty" validate:"required"`
}
