tests/spec/emit/snapshots/struct_with_tag_structured_defaults.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[tag("bson", snake_case)]
  struct User {
    userName: string,
  }
---
package main

type User struct {
	UserName string `bson:"user_name"`
}
