tests/spec/emit/snapshots/struct_with_yaml_option_omitempty.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[yaml(omitempty)]
  struct User {
    name: string,
    email: Option<string>,
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type User struct {
	Name  string                 `yaml:"name,omitempty"`
	Email lisette.Option[string] `yaml:"email,omitempty"`
}
