tests/spec/emit/snapshots/struct_zero_fill_lisette_option_emits_none.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Conf { name: string, opt: Option<int> }\n\nfn test() -> Conf {\n  Conf { name: \"x\", .. }\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Conf struct {
	name string
	opt  lisette.Option[int]
}

func test() Conf {
	return Conf{
		name: "x",
		opt:  lisette.MakeOptionNone[int](),
	}
}
